--- a/RWorksheet#4a.Rmd
+++ b/RWorksheet#4a.Rmd
@@ -9,38 +9,89 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+#1. The table below shows the data about shoe size and height. Create a data frame.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+shoe_size <- c(6.5, 9.0, 8.5, 8.5, 10.5, 7.0, 9.5, 9.0, 13.0, 7.5, 10.5, 8.5, 12.0, 10.5, 13.0, 11.5, 8.5, 5.0, 10.0, 6.5, 7.5, 8.5, 10.5, 8.5 ,10.5, 11.0, 9.0, 13.0)
+height <- c(66.0, 68.0, 64.5, 65.0, 70.0, 64.0, 70.0, 71.0, 72.0, 64.0, 74.5, 67.0, 71.0, 71.0, 77.0, 72.0, 59.0, 62.0, 72.0, 66.0, 64.0, 67.0, 73.0, 69.0, 72.0, 70.0,69.0,70.0)
+gender <- c("F","F","F","F","M","F","F","F","M","F","M","F","M","M","M","M","F","F","M","F","F","M","M","F","M","M","M","M")
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Create a data frame
+data <- data.frame(ShoeSize = shoe_size, Height = height, Gender = gender)
 
-```{r cars}
-summary(cars)
-```
+#a. Describe the data. 
+summary(data)
 
-## Including Plots
+#b. Create a subset by males and females with their corresponding shoe size and height.
+#What its result? Show the R scripts. 
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+males <- data[data$Gender == "M", c("Gender","ShoeSize", "Height")]
+females <- data[data$Gender == "F", c("Gender", "ShoeSize", "Height")]
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+males
+females
 
-#1 Create a data frame.
-shoesize <- c(6.5,9.0,8.5,8.5,10.5,7.0,9.5,9.0,13.0,7.5,10.5,8.5,12.0,10.5,13.0,11.5,8.5,5.0,10.0,6.5,7.5,8.5,10.5,11.0,9.0,13.0)
-  height <- c(66.0,68.0,64.5,65.0,70.0,64.0,70.0,71.0,72.0,64.0,74.5,67.0,71.0,71.0,77.0,72.0,59.0,62.0,72.0,66.0,64.0,67.0,72.0,69.0,72.0,70.0,69.0,70.0)
-  gender <- c("F","F","F","F","M","F","F","F","M","F","M","F","M","M","M","M","F","F","M","F","F","M","M","F","M","M","M","M")
-  
-household_data <- data.frame(26:28(
-    Shoe_size = shoesize, 
-    Height = height, 
-    Gender = gender
-  ) 
+
+
+#c. Find the mean of shoe size and height of the respondents. Write the R scripts and it result.
+mean_shoe_size <- mean(data$ShoeSize)
+mean_height <- mean(data$Height)
+
+mean_shoe_size
+mean_height
+
+#d. Is there a relationship between shoe size and height? Why?
+#No, In my opinion it doesn't affect shoe size to height and vice versa in growing up. 
+correlation <- cor(data$ShoeSize, data$Height)
+correlation 
+
+
+
+
+#2. Create a character vector of months
+months <- c(
+  "March", "April", "January", "November", "January",
+  "September", "October", "September", "November", "August",
+  "January", "November", "November", "February", "May", "August",
+  "July", "December", "August", "August", "September", "November", "February", "April"
 )
-Household_data
-#1bCreate a subset by males and females with their corresponding shoe size and height.
-susbset(Household_data)
 
+     factor_months_vector <- factor(months)
+  
+     print(factor_months_vector)
+
+    levels(factor_months_vector)
+
+
+#3 summary 
+    
+    # character vector
+    summary(months)
+    
+    # the factor
+    summary(factor_months_vector)
+    
+#4 Create a vector and factor
+  
+    direction_vector <- c("north", "east", "west")
+    frequency_vector <- c(1, 4, 3)
+    
+    factor_data <- factor(direction_vector, levels = c("east", "west", "north"))
+    print(factor_data)
+#6 
+    selected_number <- sample(1:50, 1)
+    
+   
+    
+    paste("Chosen Number:", selected_number, "\n")
+  
+    if (selected_number < 1 || selected_number > 50) {
+      cat("The number selected is beyond the range of 1 to 50\n")
+    } else {
+    
+      if (selected_number == 20) {
+        cat("TRUE\n")
+      } else {
+        cat(selected_number, "\n")
+      }
+    }z
