--- a/RWorksheet#4a.Rmd
+++ b/RWorksheet#4a.Rmd
@@ -1,97 +1,242 @@
 ---
-title: "RWorksheet_Capaque#4a"
-author: "SHANE CAPAQUE"
-date: "2023-10-25"
-output: pdf_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
-#1. The table below shows the data about shoe size and height. Create a data frame.
+# 1
 
-shoe_size <- c(6.5, 9.0, 8.5, 8.5, 10.5, 7.0, 9.5, 9.0, 13.0, 7.5, 10.5, 8.5, 12.0, 10.5, 13.0, 11.5, 8.5, 5.0, 10.0, 6.5, 7.5, 8.5, 10.5, 8.5 ,10.5, 11.0, 9.0, 13.0)
-height <- c(66.0, 68.0, 64.5, 65.0, 70.0, 64.0, 70.0, 71.0, 72.0, 64.0, 74.5, 67.0, 71.0, 71.0, 77.0, 72.0, 59.0, 62.0, 72.0, 66.0, 64.0, 67.0, 73.0, 69.0, 72.0, 70.0,69.0,70.0)
-gender <- c("F","F","F","F","M","F","F","F","M","F","M","F","M","M","M","M","F","F","M","F","F","M","M","F","M","M","M","M")
+shoeSize <- c(6.5, 9.0, 8.5, 8.5, 10.5, 7.0, 9.5, 9.0, 13.0, 7.5, 10.5, 8.5, 12.0, 10.5, 13.0, 11.5, 8.5,5.0,10.0,6.5,7.5,8.5,10.5,8.5,10.5,11.0,9.0,13.0)
 
-# Create a data frame
-data <- data.frame(ShoeSize = shoe_size, Height = height, Gender = gender)
+height <- c(66.0, 68.0, 64.5, 65.0, 70.0,64.0,70.0,71.0,72.0,64.0,74.5,67.0,71.0,71.0,77.0,72.0,59.0,62.0,72.0,66.0,64.0,67.0,73.0,69.0,72.0,70.0,69.0,70.0)
 
-#a. Describe the data. 
-summary(data)
+gender <- c("F", "F", "F", "F", "M", "F", "F", "F", "M", "F", "M" , "F", "M", "M", "M", "M", "F", "F", "M", "F", "F", "M", "M", "F", "M", "M", "M", "M")
 
-#b. Create a subset by males and females with their corresponding shoe size and height.
-#What its result? Show the R scripts. 
-
-
-males <- data[data$Gender == "M", c("Gender","ShoeSize", "Height")]
-females <- data[data$Gender == "F", c("Gender", "ShoeSize", "Height")]
-
-males
-females
-
-
-
-#c. Find the mean of shoe size and height of the respondents. Write the R scripts and it result.
-mean_shoe_size <- mean(data$ShoeSize)
-mean_height <- mean(data$Height)
-
-mean_shoe_size
-mean_height
-
-#d. Is there a relationship between shoe size and height? Why?
-#No, In my opinion it doesn't affect shoe size to height and vice versa in growing up. 
-correlation <- cor(data$ShoeSize, data$Height)
-correlation 
-
-
-
-
-#2. Create a character vector of months
-months <- c(
-  "March", "April", "January", "November", "January",
-  "September", "October", "September", "November", "August",
-  "January", "November", "November", "February", "May", "August",
-  "July", "December", "August", "August", "September", "November", "February", "April"
+householdData <- data.frame(
+  ShoeSize = shoeSize,
+  Height = height,
+  Gender = gender
 )
 
-     factor_months_vector <- factor(months)
-  
-     print(factor_months_vector)
-
-    levels(factor_months_vector)
+householdData
 
 
-#3 summary 
-    
-    # character vector
-    summary(months)
-    
-    # the factor
-    summary(factor_months_vector)
-    
-#4 Create a vector and factor
-  
-    direction_vector <- c("north", "east", "west")
-    frequency_vector <- c(1, 4, 3)
-    
-    factor_data <- factor(direction_vector, levels = c("east", "west", "north"))
-    print(factor_data)
-#6 
-    selected_number <- sample(1:50, 1)
-    
-   
-    
-    paste("Chosen Number:", selected_number, "\n")
-  
-    if (selected_number < 1 || selected_number > 50) {
-      cat("The number selected is beyond the range of 1 to 50\n")
-    } else {
-    
-      if (selected_number == 20) {
-        cat("TRUE\n")
-      } else {
-        cat(selected_number, "\n")
-      }
-    }z
+# 1.a
+# In the data, there are three variables which are the shoe size, height, and gender. There are 28 observations
+
+
+# 1.b
+
+males <- householdData[householdData$Gender == "M",]
+males
+
+females <- householdData[householdData$Gender == "F",]
+females
+
+# 1.c
+
+meanOfShoeSize <- mean(householdData$ShoeSize)
+meanOfShoeSize
+
+meanOfHeight <- mean(householdData$Height)
+meanOfHeight
+
+# 1.d
+# The relationship of the two is that the shoe size is directly proportional to the height. If the height is small, the shoe size is also small.
+
+#-------------------
+
+# 2
+months_vector <- c("March","April","January","November","January","September","October","September","November","August","January","November","November","February","May","August","July","December","August","August","September","November","February","April")
+
+months_vector
+
+factor_months_vector <- factor(months_vector)
+
+factor_months_vector
+
+# ----------
+
+# 3
+
+summary(months_vector)
+summary(factor_months_vector)
+
+# In the summary of months_vector, it shows the number of observations, class, and mode of the vector.
+
+# In the summary of factor_months_vector, it shows the frequency of each months.
+
+# Both are useful in different cases where the no. of observations, class, mode, or the frequency is needed.
+
+# ------------
+
+# 4
+
+factor_data <- c("East", "West", "North")
+factor_frequency <- c(1,4,3)
+
+new_order_data <- factor(factor_data,levels = c("East","West","North"))
+
+print(new_order_data)
+
+
+
+# ------------
+
+# 5
+imported_table <- read.table(file =  "/cloud/project/import_march.csv", header = TRUE, sep = ",")
+
+imported_table
+
+
+# ------------
+
+# 6
+
+randomNum <- readline(prompt = "Enter number from 1 to 50: ")
+
+#cant knit if there is as.numeric
+#randomNum <- as.numeric(randomNum)
+
+paste("The number you have chosen is", randomNum)
+
+if (randomNum > 50) {
+  paste("The number selected is beyond the range of 1 to 50")
+} else if (randomNum == 20) {
+  paste("TRUE")
+} else {
+  paste(randomNum)
+}
+
+# ---------
+
+# 7
+
+minimumBills <- function(price) {
+ 
+  minBills <- price %/% 50
+  paste("The minimum no. of bills:", minBills)
+}
+
+minimumBills(90)
+
+# ----------
+
+# 8.a
+
+names <- c("Annie", "Thea", "Steve", "Hanna")
+grade1 <- c(85,65,75,95)
+grade2 <- c(65,75,55,75)
+grade3 <- c(85,90,80,100)
+grade4 <- c(100,90,85,90)
+
+mathScore <- data.frame(
+  Name = names,
+  Grade1 = grade1,
+  Grade2 = grade2,
+  Grade3 = grade3,
+  Grade4 = grade4
+)
+
+
+# 8.b
+
+mathScore$Average <- (mathScore$Grade1 + mathScore$Grade2 + mathScore$Grade3 + mathScore$Grade4) / 4
+
+highscorers <- mathScore[mathScore$Average > 90,]
+highscorers
+
+if (nrow(highscorers) > 0) {
+  paste(highscorers$Name, "'s average grade this semester is", high_scorers$Average)
+} else {
+  paste("No students have an average math score over 90.")
+}
+
+# 8.c
+
+firstTest <- sum(mathScore$Grade1) / nrow(mathScore)
+firstTest
+
+secondTest <- sum(mathScore$Grade2) / nrow(mathScore)
+secondTest
+
+thirdTest <- sum(mathScore$Grade3) / nrow(mathScore)
+thirdTest
+
+fourthTest <- sum(mathScore$Grade4) / nrow(mathScore)
+fourthTest
+
+
+if (firstTest < 80) {
+  paste("The 1st test was difficult.")
+} else if(secondTest < 80) {
+  paste("The 2nd test was difficult.")
+} else if(thirdTest < 80) {
+  paste("The 3rd test was difficult.")
+} else if(fourthTest < 80) {
+  paste("The 4th test was difficult.")
+} else {
+  paste("No test had an average score less than 80.")
+}
+
+# 8.d
+# annie scores
+if (mathScore[1,2] > mathScore[1,3] && mathScore[1,2] > mathScore[1,4] && mathScore[1,2] > mathScore[1,5]) {
+  annieHighest <- mathScore[1,2]
+} else if (mathScore[1,3] > mathScore[1,4] && mathScore[1,3] > mathScore[1,5]) {
+  annieHighest <- mathScore[1,3]
+} else if (mathScore[1,4] > mathScore[1,5] && mathScore[1,2] > mathScore[1,5]) {
+  annieHighest <- mathScore[1,4]
+} else {
+  annieHighest <- mathScore[1,5]
+}
+
+
+# thea scores
+if (mathScore[2,2] > mathScore[2,3] && mathScore[2,2] > mathScore[2,4] && mathScore[2,2] > mathScore[2,5]) {
+  theaHighest <- mathScore[2,2]
+} else if (mathScore[2,3] > mathScore[2,4] && mathScore[2,3] > mathScore[2,5]) {
+  theaHighest <- mathScore[2,3]
+} else if (mathScore[2,4] > mathScore[2,5] && mathScore[2,2] > mathScore[2,5]) {
+  theaHighest <- mathScore[2,4]
+} else {
+  theaHighest <- mathScore[2,5]
+}
+
+# steve scores
+if (mathScore[3,2] > mathScore[3,3] && mathScore[3,2] > mathScore[3,4] && mathScore[3,2] > mathScore[3,5]) {
+  steveHighest <- mathScore[3,2]
+} else if (mathScore[3,3] > mathScore[3,4] && mathScore[3,3] > mathScore[3,5]) {
+  steveHighest <- mathScore[2,3]
+} else if (mathScore[3,4] > mathScore[3,5] && mathScore[3,2] > mathScore[3,5]) {
+  steveHighest <- mathScore[3,4]
+} else {
+  steveHighest <- mathScore[3,5]
+}
+
+# hanna scores
+if (mathScore[4,2] > mathScore[4,3] && mathScore[4,2] > mathScore[4,4] && mathScore[4,2] > mathScore[4,5]) {
+  hannaHighest <- mathScore[4,2]
+} else if (mathScore[4,3] > mathScore[4,4] && mathScore[4,3] > mathScore[4,5]) {
+  hannaHighest <- mathScore[2,3]
+} else if (mathScore[4,4] > mathScore[4,5] && mathScore[4,2] > mathScore[4,5]) {
+  hannaHighest <- mathScore[4,4]
+} else {
+  hannaHighest <- mathScore[4,5]
+}
+
+mathScore$HighestGrades <- c(annieHighest, theaHighest, steveHighest, hannaHighest)
+
+
+above90 <- mathScore[mathScore$HighestGrades > 90,]
+above90
+
+if (nrow(above90) > 0) {
+  paste(above90$Name, "'s highest grade this semester is", above90$HighestGrade)
+} else {
+  paste("No students have an average math score over 90.")
+}
+
+
+
